<resources>
    // app name
    <string name="app_name">Movie Catalogue</string>

    // fragment title
    <string name="fragment_home_title">Home</string>
    <string name="fragment_search_title">Search</string>
    <string name="fragment_favorite_title">Favorite</string>
    <string name="fragment_about_me_title">About Me</string>
    <string name="fragment_more_title">More</string>

    // action title
    <string name="action_setting_title">Setting</string>
    <string name="action_search_title">Search</string>

    // bottom nav
    <string name="home_bottom_nav_title">Home</string>
    <string name="search_bottom_nav_title">Search</string>
    <string name="favorite_bottom_nav_title">Favorite</string>
    <string name="about_me_bottom_nav_title">About Me</string>
    <string name="more_bottom_nav_title">More</string>

    // tab title
    <string name="detail_film_poster_tag">Film Poster</string>
    <string name="detail_film_poster_film_description_tag">Film Film Description</string>
    <string name="detail_film_original_title_tag">Original Title</string>

    // detail film tag
    <string name="detail_film_genre_tag">Genre</string>
    <string name="detail_film_score_tag">Score</string>
    <string name="detail_film_overview_tag">Overview</string>
    <string name="detail_film_release_date_tag">Release Date</string>
    <string name="detail_film_add_to_favorite_film">Add to Favorite Film</string>
    <string name="detail_film_toast_add_to_favorite_film">Add to Favorite</string>
    <string name="remove_from_favorite_film">Remove</string>
    <string name="detail_tv_show_poster_tag">Tv Show Poster</string>
    <string name="detail_tv_show_poster_description_tag">TV Show Poster Description</string>

    // favorite film tag
    <string name="detail_tv_show_original_name_tag">Original Name</string>

    // detail tv show
    <string name="detail_tv_show_genre_tag">Genre</string>
    <string name="detail_tv_show_score_tag">Score</string>
    <string name="detail_tv_show_overview_tag">Overview</string>
    <string name="detail_tv_show_first_air_date_tag">First Air Date</string>
    <string name="detail_tv_show_add_to_favorite_tv_show">Add to Favorite TV Show</string>
    <string name="detail_tv_show_toast_add_to_favorite_tv_show">Add to Favorite</string>
    <string name="remove_from_favorite_tv_show">Remove</string>
    <string name="language">Language</string>
    <string name="language_select">Select Language</string>

    // favorite tv show tag
    <string name="language_icon_description">Language icon</string>

    // language tag
    <string name="language_english">English</string>
    <string name="language_indonesia">Indonesia</string>
    <string name="daily_reminder_tag">Daily Reminder</string>
    <string name="daily_reminder_description">Get daily notification to check the app</string>
    <string name="release_today_remainder_tag">Release Today Remainder</string>

    // language list
    <string name="release_today_description">Get daily notification of film and TV show list released today</string>

    //reminder
    <string name="favoritefilmwidget_text">FAVORITE BANNER</string>
    <string name="empty_text">NO DATA</string>
    <string name="favorite_film">Favorite Film</string>
    <string name="favorite_tv_show">Favorite TV Show</string>
    <string name="toast_removed">Removed</string>
    <string name="daily_reminder_title">Daily Reminder</string>
    <string name="daily_remainder_message">Check out latest movies and tv shows today</string>
    <string name="toast_daily_remainder_on">Daily Reminder: On</string>
    <string name="toast_daily_remainder_off">Daily Reminder: Off</string>
    <string name="toast_release_today_on">Release Today Reminder: On</string>
    <string name="toast_release_today_off">Release Today Reminder: Off</string>
    <string name="refresh">Refresh</string>
    <string-array name="tab_home_title">
        <item>Popular Film</item>
        <item>Popular TV Show</item>
    </string-array>
    <string-array name="tab_favorite_title">
        <item>Favorite Film</item>
        <item>Favorite TV Show</item>
    </string-array>
    // widget
    <string-array name="tab_search_title">
        <item>Film</item>
        <item>TV Show</item>
    </string-array>
    <string-array name="language_list">
        <item>English</item>
        <item>Indonesian</item>
    </string-array>
</resources>
