<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:enabled="true"
        android:name="Home"
        android:icon="@drawable/ic_home_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/home_bottom_nav_title"/>
    <item
        android:id="@+id/nav_search"
        android:enabled="true"
        android:name="Search"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/search_bottom_nav_title"/>
    <item
        android:id="@+id/nav_favorite"
        android:enabled="true"
        android:name="Favorite"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/favorite_bottom_nav_title"/>
    <item
        android:id="@+id/nav_account"
        android:enabled="true"
        android:name="About"
        android:icon="@drawable/ic_person_outline_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/about_me_bottom_nav_title" />
    <item
        android:id="@+id/nav_more"
        android:enabled="true"
        android:name="More"
        android:icon="@drawable/ic_more_vert_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/more_bottom_nav_title"/>
</menu>